--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "ble-midi-simulator",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "dist/main/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron": "cross-env NODE_ENV=production electron .",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5175 && cross-env NODE_ENV=development electron .\"",
+    "build:main": "tsc -p src/main/tsconfig.json",
+    "build:electron": "npm run build && npm run build:main",
+    "dist": "electron-builder"
   },
   "dependencies": {
+    "@abandonware/noble": "^1.9.2-26",
+    "bleno": "^0.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^10.0.0",
+    "electron": "^28.3.3",
+    "electron-builder": "^24.13.3",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "wait-on": "^7.2.0"
   }
 }
