feat: Release v1.0.0 with dual-mode support and enhanced features
This commit marks the official release of BLE MIDI Simulator v1.0.0. It introduces dual-mode functionality (Central and Peripheral), advanced MIDI message handling, and real-time statistics. The README has been significantly updated to reflect new features and installation instructions. Additionally, the package.json version is updated, and new build scripts are added for improved development workflow.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "ble-midi-simulator",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "BLE MIDI Simulator - A dual-mode Bluetooth Low Energy MIDI application",
+  "author": "Claude Code Assistant",
   "main": "dist/main/main/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:renderer": "vite build --config vite.renderer.config.ts",
     "preview": "vite preview",
     "electron": "cross-env NODE_ENV=production electron .",
-    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5175 && cross-env NODE_ENV=development electron .\"",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron .\"",
     "build:main": "tsc -p src/main/tsconfig.json",
-    "build:electron": "npm run build && npm run build:main",
+    "build:electron": "npm run build:renderer && npm run build:main",
     "dist": "electron-builder"
   },
   "dependencies": {
