--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -17,6 +17,10 @@
     "../main/**/*.ts",
     "../shared/**/*.ts"
   ],
+  "typeRoots": [
+    "../../node_modules/@types",
+    "./types"
+  ],
   "exclude": [
     "node_modules",
     "**/*.test.ts"
