--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Dependencies
-node_modules/
-*/node_modules/
-
-# Web build (Vite)
-dist
-dist-ssr
-*.local
-
-# React Native
 # OSX
 #
 .DS_Store
@@ -39,6 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+**/.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -49,31 +31,15 @@ local.properties
 *.iml
 *.hprof
 .cxx/
-
-# Node
-#
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# BUCK
-buck-out/
-\.buckd/
 *.keystore
 !debug.keystore
+.kotlin/
 
-# Bundle artifacts
-*.jsbundle
-
-# CocoaPods
-/ios/Pods/
-
-# Expo
-.expo/
-web-build/
-
-# React Native Windows
-windows/BleMidiSimulatorRN/Generated Files/
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
 
 # fastlane
 #
@@ -91,99 +57,19 @@ windows/BleMidiSimulatorRN/Generated Files/
 *.jsbundle
 
 # Ruby / CocoaPods
+**/Pods/
 /vendor/bundle/
-*.xcodeproj
 
-# Temporary files created by Metro
+# Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
-# MaCatalyst
-**/macOS/
+# testing
+/coverage
 
-# Flipper
-#
-Flipper-Folly-Prefix.pch
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# TypeScript
-*.tsbuildinfo
-
-# Watchman
-.watchmanconfig
-
-# Testing
-coverage/
-.nyc_output/
-
-# Linting
-.eslintcache
-
-# React Native debugger
-.vscode/
-
-# Miscellaneous
-*.class
-*.lock
-.lock-wscript
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
